--- a/confira.html
+++ b/confira.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Máxima Multas - Página de Login</title>
 	<link rel="stylesheet" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" href="assets/css/styleteste.css"> -->
 	<link rel="shortcut icon" href="assets/img/maxima-multas-website-favicon-color.png" type="image/x-icon">
 </head>
 
