page added and responsiveness correction

--- a/confira.html
+++ b/confira.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Máxima Multas - Página de Login</title>
 	<link rel="stylesheet" href="assets/css/style.css">
-	<!-- <link rel="stylesheet" href="assets/css/styleteste.css"> -->
 	<link rel="shortcut icon" href="assets/img/maxima-multas-website-favicon-color.png" type="image/x-icon">
 </head>
 
@@ -16,10 +15,9 @@
 			<img class="img-logo-maxima" src="assets/img/maxima-logo.png" alt="Logo da Máxima Multas">
 		</div>
 		<nav>
-			<a>Home</a>
-			<a>A Máxima Multas</a>
-			<a>Confira sua CNH</a>
-			<a>Contato</a>
+			<a href="index.html">Home</a>
+			<a href="confira.html">Confira sua CNH</a>
+			<a href="contato.html">Contato</a>
 		</nav>
 	</header>
 
