password reset page added

--- a/confira.html
+++ b/confira.html
@@ -30,16 +30,17 @@
 			<div class="card-login">
 				<h1>LOGIN</h1>
 				<div class="textfield">
-					<label for="usuario">Usuário</label>
-					<input type="text" name="usuario" placeholder="Usuário">
+					<label for="usuario">CPF</label>
+					<input type="text" id="cpf" autocomplete="off" maxlength="14" name="usuario" placeholder="Digite aqui seu CPF">
 				</div>
 				<div class="textfield">
 					<label for="senha">Senha</label>
-					<input type="password" name="senha" placeholder="Senha">
+					<input type="password" name="senha" placeholder="Digite aqui sua senha">
 				</div>
 				<button class="btn-login">Login</button>
 				<div class="nologin">
 					<p>Não tem login? <a href="cadastro.html">Cadastre-se</a></p>
+					<p><a href="resetsenha.html">Esqueci minha senha</a></p>
 				</div>
 			</div>
 		</section>
@@ -50,6 +51,11 @@
 			© 2023 - Nickolas Moura - Todos os direitos reservados - Criado para <a href="https://github.com/nickmoura">meu portfólio de GitHub</a>
 		</p>
 	</footer>
+
+	<script src="main.js">
+		
+	</script>
+
 </body>
 
 </html>
