--- a/confira.html
+++ b/confira.html
@@ -30,12 +30,12 @@
 			<div class="card-login">
 				<h1>LOGIN</h1>
 				<div class="textfield">
-					<label for="usuario">CPF</label>
-					<input type="text" id="cpf" autocomplete="off" maxlength="14" name="usuario" placeholder="Digite aqui seu CPF">
+					<label for="cpf">CPF</label>
+					<input type="text" id="cpf" autocomplete="off" inputmode="numeric" maxlength="14" name="usuario" placeholder="Digite aqui seu CPF">
 				</div>
 				<div class="textfield">
 					<label for="senha">Senha</label>
-					<input type="password" name="senha" placeholder="Digite aqui sua senha">
+					<input type="password" id="senha" name="senha" placeholder="Digite aqui sua senha">
 				</div>
 				<button class="btn-login">Login</button>
 				<div class="nologin">
