--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 					<p><a href="contato.html">Entre em contato</a> e saiba mais sobre a nossa empresa.</p>
 				</section>
 				<picture class="container-foto">
+					<source media="(max-width: 300px)" srcset="assets/img/ilustracao-multa-250.jpg">
 					<source media="(max-width: 750px)" srcset="assets/img/ilustracao-multa-300.jpg" type="image/jpeg">
 					<img src="assets/img/ilustracao-multa-700.jpg"
 						alt="Imagem ilustrativa de multa sendo aplicada por policial">
