correction on CPF field for password reset page

--- a/resetsenha.html
+++ b/resetsenha.html
@@ -26,7 +26,7 @@
 			<h2>Para recuperar seu accesso, precisamos do seu CPF.</h2>
 			<section class="area-esqueci-senha">
 				<p>Digite seu CPF</p>
-				<input id="cpf" class="campo-esqueci-senha" autocomplete="off" maxlength="14">
+				<input type="texto" id="cpf" class="campo-esqueci-senha" inputmode="numeric" autocomplete="off" maxlength="14">
 			</section>
 			<div class="area-botao-reset">
 				<button class="btn-login" onclick="alert('Se seu CPF for reconhecido, você receberá um e-mail para redefinir sua senha')">Redefinir senha</button>
