masks for cpf and mobile improved + pages added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 	<header>
 		<div class="logo-maxima">
-			<img class="img-logo-maxima" src="assets/img/maxima-logo.png" alt="Logo da Máxima Multas">
+			<a href="index.html">
+				<img class="img-logo-maxima" src="assets/img/maxima-logo.png" alt="Logo da Máxima Multas">
+			</a>
 		</div>
 		<nav>
 			<a href="index.html">Home</a>
@@ -53,7 +55,7 @@
 					<p><a href="contato.html">Entre em contato</a> e saiba mais sobre a nossa empresa.</p>
 				</section>
 				<picture class="container-foto">
-					<source media="(max-width: 300px)" srcset="assets/img/ilustracao-multa-250.jpg">
+					<source media="(max-width: 300px)" srcset="assets/img/ilustracao-multa-250.jpg" type="image/jpeg">
 					<source media="(max-width: 750px)" srcset="assets/img/ilustracao-multa-300.jpg" type="image/jpeg">
 					<img src="assets/img/ilustracao-multa-700.jpg"
 						alt="Imagem ilustrativa de multa sendo aplicada por policial">
