--- a/resetsenha.html
+++ b/resetsenha.html
@@ -12,7 +12,9 @@
 <body>
 	<header>
 		<div class="logo-maxima">
-			<img class="img-logo-maxima" src="assets/img/maxima-logo.png" alt="Logo da Máxima Multas">
+			<a href="index.html">
+				<img class="img-logo-maxima" src="assets/img/maxima-logo.png" alt="Logo da Máxima Multas">
+			</a>
 		</div>
 		<nav>
 			<a href="index.html">Home</a>
@@ -22,19 +24,23 @@
 	</header>
 	<main class="principal-esqueci-senha">
 		<h1>Esqueceu sua senha?</h1>
-		<article class="conteudo-esqueci-senha">
-			<h2>Para recuperar seu accesso, precisamos do seu CPF.</h2>
-			<section class="area-esqueci-senha">
-				<p>Digite seu CPF</p>
-				<input type="texto" id="cpf" class="campo-esqueci-senha" inputmode="numeric" autocomplete="off" maxlength="14">
-			</section>
-			<div class="area-botao-reset">
-				<button class="btn-login" onclick="alert('Se seu CPF for reconhecido, você receberá um e-mail para redefinir sua senha')">Redefinir senha</button>
-			</div>
-		</article>
+		<div class="card-login">
+			<article class="conteudo-esqueci-senha">
+				<h2>Para recuperar seu accesso, precisamos do seu CPF.</h2>
+				<section class="area-esqueci-senha">
+					<label class="field-forgot-pass" for="name">
+						<span class="span-no-margin">CPF</span>
+						<input type="text" id="cpf" autocomplete="off" inputmode="numeric" maxlength="14" name="usuario" placeholder="Digite aqui seu CPF">
+					</label>
+				</section>
+				<div class="area-botao-reset">
+					<input type="submit" class="btn-login-signup" onclick="alert('Se seu CPF for reconhecido, você receberá um e-mail para redefinir sua senha')" value="Redefinir senha"></input>
+				</div>
+			</article>
+		</div>
 		<aside class="preciso-de-ajuda">
 			<h3>Precisa de ajuda?</h3>
-			<p>Caso tenha cadastro na Máxima Multas e não consiga resetar sua senha, <a href="#contato">entre em contato conosco</a></p>
+			<p>Caso tenha cadastro na Máxima Multas e não consiga resetar sua senha, <a href="contato.html">entre em contato conosco</a>.</p>
 		</aside>
 	</main>
 
