adjusts on responsiveness

--- a/contato.html
+++ b/contato.html
@@ -45,7 +45,7 @@
 					<span>Mensagem</span>
 					<textarea name="message" id="message" cols="50" rows="4" placeholder="Digite aqui sua mensagem. No máximo 500 caracteres." maxlength="500"></textarea>
 				</label>
-				<input class="btn-login-signup" type="submit" onclick="alert('Sua mensagem foi enviada! Em breve entraremos em contato.')" value="Enviar mensagem">
+				<input class="btn-login-signup" id="sendmessage" type="submit" onclick="alert('Sua mensagem foi enviada! Em breve entraremos em contato.')" value="Enviar mensagem">
 			</div>
 		</section>
 	</main>
