php created for db

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Máxima Multas - Contato</title>
-	<link rel="stylesheet" href="assets/css/style.css">
-	<link rel="shortcut icon" href="assets/img/maxima-multas-website-favicon-color.png" type="image/x-icon">
-	<script src="main.js" defer></script>
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Máxima Multas - Esqueci minha senha</title>
+		<link rel="stylesheet" href="../assets/css/style.css">
+		<link rel="shortcut icon" href="../assets/img/maxima-multas-website-favicon-color.png" type="image/x-icon">
+		<script src="../assets/js/main.js" defer></script>
+	</head>
 <body>
 	<header>
 		<div class="logo-maxima">
 			<a href="index.html">
-				<img class="img-logo-maxima" src="assets/img/maxima-logo.png" alt="Logo da Máxima Multas">
+				<img class="img-logo-maxima" src="../assets/img/maxima-logo.png" alt="Logo da Máxima Multas">
 			</a>
 		</div>
 		<nav>
-			<a href="index.html">Home</a>
+			<a href="../index.html">Home</a>
 			<a href="confira.html">Confira sua CNH</a>
 			<a href="contato.html">Contato</a>
 		</nav>
 	</header>
+
 	<main class="main-login-signup">
 		<section class="left-login-signup">
 			<h1>Dúvidas? Entre em contato conosco!</h1>
-			<img src="assets/img/Contact us-pana.svg" class="left-login-image" alt="Contate-nos - ilustração">
+			<img src="../assets/img/Contact us-pana.svg" class="left-login-image" alt="Contate-nos - ilustração">
 		</section>
 		<section class="right-login-signup">
 			<div class="card-login">
