--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		</div>
 		<nav>
 			<a href="index.html">Home</a>
-			<a href="confira.html">Confira sua CNH</a>
-			<a href="contato.html">Contato</a>
+			<a href="pages/confira.html">Confira sua CNH</a>
+			<a href="pages/contato.html">Contato</a>
 		</nav>
 	</header>
 	<main class="container-index">
