--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
 	<header>
-		<div class="logo-maxima">
+		<picture class="logo-maxima">
 			<a href="index.html">
 				<img class="img-logo-maxima" src="assets/img/maxima-logo.png" alt="Logo da Máxima Multas">
 			</a>
-		</div>
+		</picture>
 		<nav>
 			<a href="index.html">Home</a>
 			<a href="pages/confira.html">Confira sua CNH</a>
@@ -98,24 +98,24 @@
 		</article>
 		<aside class="paralelos">
 			<h2>Depoimentos</h2>
-			<article class="container-depoimentos">
-				<section class="depoimento">
+			<section class="container-depoimentos">
+				<div class="depoimento">
 					<img src="assets/img/maria3.jpg" alt="" style="width:90px;height: 135px;">
 					<p><span>Maria Oliveira</span> Tech Lead</p>
 					<p>Quando me vi com muitas multas acumuladas, a Máxima Multas fez a diferença. Reduzi minha pontuação na carteira e aliviei o peso financeiro das multas. Obrigada, Máxima Multas!</p>
-				</section>
-				<section class="depoimento">
+				</div>
+				<div class="depoimento">
 					<img src="assets/img/joao.jpg" alt="" style="width:90px">
 					<p><span>João da Silva</span> Advogado</p>
 					<p>Agradeço muito à Máxima Multas. Simplificaram um processo complicado, ajudando-me a contestar multas injustas e reduzir penalidades. Sua equipe é profissional, eficiente e comprometida. Recomendo a todos.</p>
-				</section>
-				<section class="depoimento">
+				</div>
+				<div class="depoimento">
 					<img src="assets/img/pedro.jpg" alt="" style="width:90px;height: 135px">
 					<p><span>Pedro Santos</span> Professor</p>
 					<p>A Máxima Multas é um salvador nas multas de trânsito. Sua equipe ofereceu suporte abrangente, estratégias eficazes e confiança desde o início.  Agradeço pela orientação e resultados.</p>
 					<!-- A do João se ajustou perfeitamente sem precisar alterar a altura -->
-				</section>
-			</article>
+				</div>
+			</section>
 			<h2>Localização</h2>
 			<div class="container-mapa">
 				<iframe class="mapa"
